fix: Move closing 'small' tag on product_details.html page to outside the if statement that checks if the user is logged in as the tag was not being closed correctly, resulting in some customer reviews being printed in small text. Remove errant closing list tag from product_details.html page. Remove line-height from h4 styling as it was squashing the blogpost titles on mobile view.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -184,7 +184,7 @@ h4 {
     margin-top: 0;
     font-size: 22px;
     letter-spacing: 1px;
-    line-height: 18px;
+    /* line-height: 18px; */
     font-weight: 700;
 }
 
